# Permit402

./: .gitignore  AGENTS.md  Anchor.toml  README.md  package.json  pnpm-lock.yaml  techstack.md
apps/web/: package.json
apps/web/app/: layout.tsx  styles.css
apps/web/components/: demo-dashboard.tsx  lifi-funding-panel.tsx
apps/web/scripts/: check-lifi-route.mjs
candidate-projects/: 01-Permit402.md
docs/: frontendinspo.md  permit402-plan.md  team-handoff.md
docs/hackathon-tracks/: lifi-track.md  resources.md  solana-track.md
docs/submission/: demo-script.md  lifi-route-evidence.md  program-addresses.md  qa-checklist.md  track-fit.md  x402-facilitator-evidence.md
programs/permit402/: Cargo.toml
programs/permit402/src/: constants.rs  errors.rs  events.rs  lib.rs  policy_logic.rs
programs/permit402/src/instructions/: add_merchant.rs  close_policy.rs  create_policy.rs  fund_policy.rs  init_config.rs  mod.rs  pay_x402.rs  record_blocked_attempt.rs  register_merchant.rs  revoke_merchant.rs  set_category_budget.rs
programs/permit402/src/state/: blocked_attempt.rs  category_budget.rs  config.rs  merchant.rs  merchant_binding.rs  mod.rs  policy_vault.rs  receipt.rs
scripts/: start-local-validator.sh  stop-local-validator.sh
services/agent/: package.json
services/facilitator/: package.json
services/keeper/: package.json  tsconfig.json
services/merchants/: package.json
tests/: permit402_close_policy.spec.ts  permit402_policy.spec.ts  permit402_rejections.spec.ts  permit402_replay.spec.ts
tests/helpers/: fixtures.ts  pda.ts  token.ts
(+21 files in other folders)
