[package]
name = "permit402"
version = "0.1.0"
description = "Permit402: Solana policy vault for autonomous x402 payments"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "permit402"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
